<?xml version="1.0"?>
<package format="3">
  <name>crsf_safeguard</name>
  <version>0.0.1</version>
  <description>Safeguard nodes</description>
  <maintainer email="lantacis@todo.todo">lantacis</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>

